# redb

./: .gitignore  AGENTS.md  Cargo.toml  LICENSE
.omo/notepads/redb/: decisions.md  issues.md  learnings.md  problems.md
.omo/run-continuation/: ses_07a8d16f2ffeI7QYWRXWn25IPU.json  ses_07b17a4fdffeMGwM1YXM56DYmQ.json  ses_07b17c49affe9WLlU3oSTq4o3L.json  ses_07b17d74cffeIZmm13Yv4qNV71.json  ses_07b17ea84ffe9vJYogILE7A7AS.json  ses_07b180093ffeqDlTVFt8Zmtoaj.json  ses_07b181494ffehiPolT6TJeZJoW.json  ses_07b2a4807ffeEMzlYcz0Yy5sJd.json  ses_07b2a4814ffezWMbSmuIkAFjIM.json  ses_07b2a5bd0ffesmKGx3BPv717fM.json  ses_07b2a5be1ffev1nTfZkATWauUV.json  ses_07b2ae071ffe2I5NmvH8f9EV5U.json  ses_07b2ae6d7ffervWJA0fq9cYLQj.json  ses_07b2aec5bffe3nZ3CFsXx034zv.json  ses_07b2af17effeK7vsAVQLSSexTZ.json  ses_07b2b5d5affeBi0oyGiCLbrzdD.json
rust-core/: AGENTS.md  Cargo.toml
rust-core/src/: ffi.rs  lib.rs
rust-core/src/db/: connection.rs  mod.rs  ssh_tunnel.rs
rust-core/src/sql/: builder.rs  parser.rs
rust-core/src/store/: mod.rs
rust-core/src/types/: mod.rs
rust-core/tests/: integration_test.rs
scripts/: build-rust.sh
swift-ui/: AGENTS.md  project.yml
swift-ui/RedB/: RedB-Bridging-Header.h  RedBApp.swift
swift-ui/RedB.xcodeproj/: project.pbxproj
swift-ui/RedB.xcodeproj/xcuserdata/chengvar.xcuserdatad/xcschemes/: xcschememanagement.plist
swift-ui/RedB/Assets.xcassets/mariadb-icon.imageset/: Contents.json
swift-ui/RedB/Assets.xcassets/mysql-icon.imageset/: Contents.json
swift-ui/RedB/Assets.xcassets/pgsql-icon.imageset/: Contents.json
swift-ui/RedB/Models/: DatabaseViewModel.swift  MySQLFunctions.swift  QueryResultModel.swift  QueryTab.swift  SQLContext.swift  SavedQuery.swift  View+Tooltip.swift
swift-ui/RedB/Services/: RustBridge.swift
swift-ui/RedB/Views/: CodeEditor.swift  DataTable.swift  NewTableSheet.swift  QueryResultView.swift  SQLQueryView.swift  SidebarView.swift  TableBrowserView.swift  TableStructureView.swift  Untitled.swift
