[package]
name = "redb-core"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["lib", "staticlib", "cdylib"]
name = "redb_core"

[dependencies]
uniffi = { version = "0.28", features = ["cli"] }
thiserror = "1"
tokio = { version = "1", features = ["full"] }
tokio-postgres = { version = "0.7", optional = true }
mysql_async = { version = "0.34", optional = true }
rusqlite = { version = "0.31", features = ["bundled"], optional = true }
tiberius = { version = "0.12", default-features = false, features = ["tokio"], optional = true }
tokio-util = { version = "0.7", features = ["compat"], optional = true }
odbc-api = { version = "8", optional = true }
sqlparser = "0.49"
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[features]
default = ["sqlite"]
sqlite = ["rusqlite"]
postgres = ["tokio-postgres"]
mysql = ["mysql_async"]
sqlserver = ["tiberius", "tokio-util"]
db2 = ["odbc-api"]
all-dbs = ["sqlite", "postgres", "mysql", "sqlserver"]

[build-dependencies]
uniffi = { version = "0.28", features = ["build"] }
